--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 MONGODB_URI=mongodb+srv://matheuszainopo:OTQh0VIjYRQXwcW4@zaiknown.lhrf0cu.mongodb.net/?retryWrites=true&w=majority&appName=Zaiknown
+VITE_API_URL=https://loja-zkn-api.onrender.com/api
